﻿Hot Status
by Justin Clareburt
24-Dec-2020 v1.0.0: Initial release (Taken from Hot Settings 1.3.1)