@@ -1,3 +1,4 @@
 ﻿Hot Status
 by Justin Clareburt
+24-Dec-2020 v1.0.1: Fixed bug with empty tool tip content in error tag
 24-Dec-2020 v1.0.0: Initial release (Taken from Hot Settings 1.3.1)
